# SuperNeuro-ai

./: .env.example  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  turbo.json
app/: layout.tsx
app/(client)/: globals.css  layout.tsx  page.tsx
app/components/: add-knowledge-base-modal.tsx  chat-workspace.tsx  dashboard.tsx  icon-sidebar.tsx  secondary-sidebar.tsx  (+1 more)
apps/worker/: package.json  pyproject.toml  tsconfig.json
apps/worker/scripts/: backfill_created_at.py
apps/worker/src/: index.ts
apps/worker/src/asset-processing/: extraction.ts  handlers.ts  image-pipeline.ts  image-quality.ts  pdf-pipeline.ts
apps/worker/src/core/: config.ts
apps/worker/src/libs/: chunking.ts  cloudflare.ts  index.ts  pinecone.ts  redis.ts
apps/worker/src/libs/aws/: base.ts  client.ts  pollers.ts  publishers.ts
apps/worker/src/libs/llamaindex/: chunking.ts
apps/worker/src/libs/openai/: client.ts  embeddings.ts  vision.ts
apps/worker/src/models/: message-models.ts
apps/worker/src/worker/: main.py
apps/worker/src/worker/asset_processing/: extraction.py  handlers.py  image_pipeline.py  image_quality.py  pdf_pipeline.py
apps/worker/src/worker/core/: config.py
apps/worker/src/worker/libs/: cloudflare.py  mongodb.py  pinecone.py
apps/worker/src/worker/libs/aws/: base.py  client.py  pollers.py  publishers.py
apps/worker/src/worker/libs/llamaindex/: chunking.py
apps/worker/src/worker/libs/openai/: client.py  embeddings.py  vision.py
apps/worker/src/worker/models/: message_models.py
prisma/: schema.prisma
scripts/: setup-queues.ts
(+335 files in other folders)
